updated game starter html

--- a/index.html
+++ b/index.html
@@ -2,19 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Wheel of Success!</title>
+    <title>Word Avalanche</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="styles.css" rel="stylesheet">
+    <link rel="shortcut icon" href="res/Word Avalanche Favicon.jpg" type="image/x-icon">
+    <link href="css/styles.css" rel="stylesheet">
   </head>
   <body>
     <div class="main-container">
       <div id="overlay" class="start">
-        <h2 class="title">Wheel of Success</h2>
-        <a class="btn__reset">Start Game</a>
+        <h2 class="title">Word Avalanche</h2>
+        <a class="btn__reset">Hit the Slopes</a>
       </div>
 
       <div id="banner" class="section">
-        <h2 class="header">Wheel of Success</h2>
+        <h2 class="header">Word Avalanche</h2>
       </div>
 
       <div id="phrase" class="section">
@@ -42,6 +43,6 @@
         </ol>
       </div>
     </div>
-    <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
   </body>
 </html>
