Slowly resolving bugs

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Word Avalanche</title>
+    <title>I Win</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="shortcut icon"
@@ -14,12 +14,12 @@
   <body>
     <div class="main-container">
       <div id="overlay" class="start">
-        <h2 class="title">Word Avalanche</h2>
-        <a class="btn__reset">Hit the Slopes</a>
+        <h2 class="title">I Win</h2>
+        <a class="btn__reset">Because, I Win</a>
       </div>
 
       <div id="banner" class="section">
-        <h2 class="header">Word Avalanche</h2>
+        <h2 class="header">I Win</h2>
       </div>
 
       <div id="phrase" class="section">
@@ -47,19 +47,19 @@
       <div id="scoreboard" class="section">
         <ol>
           <li class="tries">
-            <img src="res/liveHeart.png" height="35px" width="30px" />
+            <img class="imgTries" src="res/liveHeart.png"  />
           </li>
           <li class="tries">
-            <img src="res/liveHeart.png" height="35px" width="30px" />
+            <img class="imgTries" src="res/liveHeart.png" />
           </li>
           <li class="tries">
-            <img src="res/liveHeart.png" height="35px" width="30px" />
+            <img class="imgTries" src="res/liveHeart.png" />
           </li>
           <li class="tries">
-            <img src="res/liveHeart.png" height="35px" width="30px" />
+            <img class="imgTries" src="res/liveHeart.png" />
           </li>
           <li class="tries">
-            <img src="res/liveHeart.png" height="35px" width="30px" />
+            <img class="imgTries" src="res/liveHeart.png" />
           </li>
         </ol>
       </div>
