--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
 
       <div id="scoreboard" class="section">
         <ol>
-          <li>
+          <li class="tries">
+            <img class="imgTries" src="res/liveHeart.png"  />
+          </li>
+          <li class="tries">
             <img class="imgTries" src="res/liveHeart.png" />
           </li>
-          <li>
+          <li class="tries">
             <img class="imgTries" src="res/liveHeart.png" />
           </li>
-          <li>
+          <li class="tries">
             <img class="imgTries" src="res/liveHeart.png" />
           </li>
-          <li>
-            <img class="imgTries" src="res/liveHeart.png" />
-          </li>
-          <li>
+          <li class="tries">
             <img class="imgTries" src="res/liveHeart.png" />
           </li>
         </ol>
