--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
   <body>
     <div class="main-container">
       <div id="overlay" class="start">
-        <h2 class="title">I Win</h2>
-        <a class="btn__reset">Because, I Win</a>
+        <h2 class="title">Guess The Phrase</h2>
+        <a class="btn__reset">Let's Get To It</a>
       </div>
 
       <div id="banner" class="section">
-        <h2 class="header">I Win</h2>
+        <h2 class="header">Guess The Phrase</h2>
       </div>
 
       <div id="phrase" class="section">
@@ -47,7 +47,7 @@
       <div id="scoreboard" class="section">
         <ol>
           <li class="tries">
-            <img class="imgTries" src="res/liveHeart.png"  />
+            <img class="imgTries" src="res/liveHeart.png" />
           </li>
           <li class="tries">
             <img class="imgTries" src="res/liveHeart.png" />
